Fix height of blocks
Content was too big on screens smaller than 1050px. Added a custom media query of max-width 1050px and increased the height of the blocks there.

--- a/content/themes/elements/css/app.css
+++ b/content/themes/elements/css/app.css
@@ -1940,6 +1940,9 @@ section {
 
   .section-block.image {
     height: 400px; } }
+@media all and (max-width: 1050px) {
+  .section-block {
+    height: 800px; } }
 .section-text {
   clear: both; }
   .section-text .section-body {
