--- a/content/themes/elements/sass/modules/content/_block.scss
+++ b/content/themes/elements/sass/modules/content/_block.scss
@@ -104,3 +104,9 @@
     height: 400px;
   }
 }
+
+@media all and (max-width: 1050px){
+  .section-block{
+    height: 800px;
+  }
+}
